  - Screen form-single field-layout support
  - Screen form-list pagination (defaults in search-form-inputs)
  - Template for csv render mode (mainly for form-list report-like output)
  - Support URL parameters for renderMode and pageNoLimit which along with
    the lastStandalone parameter make it easy to reuse screens and forms
    meant for user interaction as definitions for CSV output

Notable features not yet implemented (for 1.0):

- Service Facade
  - Service mail handling (MCA rules, etc)
- XML Screens
  - Templates for other non-HTML output (xsl-fo, xml, cwiki, txt)
- Tools Screens
  - Entity
    - Entity Data UI (entity list, find on entity with delete, view entity
      record with related, create/update entity record with tabs for
      list/update/delete/add dependent entities)
    - Entity Data Import and Export screens
    - SQL Query Run/View
    - Entity model internal check (relationship, view-link.key-map, ?)
    - Database meta-data check/report against entity definitions
  - Scheduler (view scheduled services with cancel, add scheduled service)
  - Script Run (or groovy shell?)
  - Security screens (consider making Entity Data UI good enough for these)
    - UserAccount screens (find/delete, edit UA (with tabs for preferences,
      themes, login, history, visit history, groups, change password))
    - UserGroup screens (find/delete, edit (tab for users in group))
    - Artifact Group (find/delete, edit (tab for artifacts in group))
    - Authorization screen (find/delete, edit (tabs for record, service))
  - Artifact Info screens (with in/out references for all)

===========================================================================
Release 1.0-preview3 - 19 Mar 2011
===========================================================================

Moqui 1.0-preview3 introduces various features to automatically and easily
make the applications you build using the previously available tools easier