@@ -11,24 +11,19 @@
  */
 package org.moqui.impl.webapp
 
-import javax.servlet.http.HttpSessionListener
-import javax.servlet.http.HttpSession
-import javax.servlet.http.HttpSessionEvent
-
-import org.moqui.impl.context.ExecutionContextFactoryImpl
-import org.slf4j.LoggerFactory
-import org.slf4j.Logger
-import java.sql.Timestamp
-import javax.servlet.ServletContextListener
+import javax.servlet.ServletContext
 import javax.servlet.ServletContextEvent
+import javax.servlet.ServletContextListener
+import org.moqui.context.ExecutionContext
 import org.moqui.context.ExecutionContextFactory
 import org.moqui.Moqui
-import javax.servlet.ServletContext
+import org.moqui.impl.context.ExecutionContextFactoryImpl
+import org.moqui.impl.context.ExecutionContextFactoryImpl.WebappInfo
 import org.moqui.impl.StupidUtilities
 import org.moqui.impl.StupidUtilities.CachedClassLoader
 
 class MoquiContextListener implements ServletContextListener {
-    protected final static Logger logger = LoggerFactory.getLogger(MoquiContextListener.class)
+    protected final static org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(MoquiContextListener.class)
 
     protected CachedClassLoader ccl = null
 
@@ -47,27 +42,42 @@ class MoquiContextListener implements ServletContextListener {
         String moquiWebappName = sc.getInitParameter("moqui-name")
 
         logger.info("Loading Moqui Webapp at [${webappId}], moqui webapp name [${moquiWebappName}], context name [${sc.getServletContextName()}], located at [${sc.getRealPath("/")}]")
-        ExecutionContextFactory executionContextFactory = new ExecutionContextFactoryImpl()
-        sc.setAttribute("executionContextFactory", executionContextFactory)
+        ExecutionContextFactory ecfi = new ExecutionContextFactoryImpl()
+        sc.setAttribute("executionContextFactory", ecfi)
 
         // there should always be one ECF that is active for things like deserialize of EntityValue
         // for a servlet that has a factory separate from the rest of the system DON'T call this (ie to have multiple ECFs on a single system)
-        Moqui.dynamicInit(executionContextFactory)
+        Moqui.dynamicInit(ecfi)
         logger.info("Loaded Moqui Execution Context Factory for webapp [${webappId}]")
 
-        //webappDef = new WebappDefinition(moquiWebappName, executionContextFactory)
+        // run after-startup actions
+        WebappInfo wi = ecfi.getWebappInfo(moquiWebappName)
+        if (wi.afterStartupActions) {
+            ExecutionContext ec = ecfi.getExecutionContext()
+            wi.afterStartupActions.run(ec)
+            ec.destroy()
+        }
     }
 
     void contextDestroyed(ServletContextEvent servletContextEvent) {
         ServletContext sc = servletContextEvent.servletContext
         String webappId = getId(sc)
+        String moquiWebappName = sc.getInitParameter("moqui-name")
 
         logger.info("Destroying Moqui Execution Context Factory for webapp [${webappId}]")
         if (sc.getAttribute("executionContextFactory")) {
-            ExecutionContextFactory executionContextFactory =
-                    (ExecutionContextFactory) sc.getAttribute("executionContextFactory")
+            ExecutionContextFactoryImpl ecfi = (ExecutionContextFactoryImpl) sc.getAttribute("executionContextFactory")
+
+            // run before-shutdown actions
+            WebappInfo wi = ecfi.getWebappInfo(moquiWebappName)
+            if (wi.beforeShutdownActions) {
+                ExecutionContext ec = ecfi.getExecutionContext()
+                wi.beforeShutdownActions.run(ec)
+                ec.destroy()
+            }
+
             sc.removeAttribute("executionContextFactory")
-            executionContextFactory.destroy()
+            ecfi.destroy()
         }
         logger.info("Destroyed Moqui Execution Context Factory for webapp [${webappId}]")
         logger.info("CachedClassLoader on destroy: classCache size [${ccl.classCache.size()}] resourceCache size [${ccl.resourceCache.size()}]")
